--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
-    "bootstrap": "4.1.3",
+    "bootstrap": ">=4.3.1",
     "jquery": "3.4.1",
     "popper.js": "1.14.4",
     "react": "16.5.2",
